# anime-worker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PRIVACY.md  README.md  TESTING.md  build.rs  config.toml  config.toml.example  docker-entrypoint.sh
.github/workflows/: ci.yml  release.yml
python/: inference_runner.py  model_configs.yaml  requirements-cpu.txt  requirements.txt  setup_env.py
python/lib/: assembly.py  config.py  hardware.py  inference.py  pipeline.py  upscale.py
src/: cleanup.rs  client.rs  config.rs  download_manager.rs  hardware.rs  log_layer.rs  main.rs  metrics.rs  models.rs  protocol.rs  runner.rs  setup.rs  upload.rs
tests/: test_hf_download.rs
